--- a/ArcMap/ArcMap.csproj
+++ b/ArcMap/ArcMap.csproj
@@ -66,6 +66,7 @@
     <Compile Include="View\MapViewUC.xaml.cs">
       <DependentUpon>MapViewUC.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\Tiff2Text.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -120,6 +121,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="BitMiracle.LibTiff.NET">
+      <Version>2.4.633</Version>
+    </PackageReference>
     <PackageReference Include="Esri.ArcGISRuntime.WPF">
       <Version>100.3.0</Version>
     </PackageReference>
