--- a/ArcMap/ArcMap.csproj
+++ b/ArcMap/ArcMap.csproj
@@ -137,6 +137,10 @@
   <ItemGroup>
     <Resource Include="Icons\search_32x32.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\minus_48x48.png" />
+    <Resource Include="Icons\plus_48x48.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
