--- a/ArcMap/ArcMap.csproj
+++ b/ArcMap/ArcMap.csproj
@@ -63,8 +63,18 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Popup.xaml.cs">
+      <DependentUpon>Popup.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="PopupRect.xaml.cs">
+      <DependentUpon>PopupRect.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ViewModel\MapViewModel.cs" />
     <Compile Include="View\DistanceMeasurement.xaml.cs">
       <DependentUpon>DistanceMeasurement.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\Drawpopup.xaml.cs">
+      <DependentUpon>Drawpopup.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\MapViewUC.xaml.cs">
       <DependentUpon>MapViewUC.xaml</DependentUpon>
@@ -83,11 +93,23 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="MapViewModel.cs" />
+    <Page Include="Popup.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="PopupRect.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Resources\ControlStyle.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\DistanceMeasurement.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\Drawpopup.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -128,7 +150,7 @@
       <Version>2.4.633</Version>
     </PackageReference>
     <PackageReference Include="Esri.ArcGISRuntime.WPF">
-      <Version>100.3.0</Version>
+      <Version>100.4.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
@@ -142,7 +164,7 @@
     <Resource Include="Icons\plus_48x48.png" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="ViewModel\" />
+    <Resource Include="Icons\save_32x32.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
