--- a/ArcMap/ArcMap.csproj
+++ b/ArcMap/ArcMap.csproj
@@ -69,6 +69,7 @@
     <Compile Include="PopupRect.xaml.cs">
       <DependentUpon>PopupRect.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ViewModel\LayerDisplayVM.cs" />
     <Compile Include="ViewModel\MapViewModel.cs" />
     <Compile Include="View\DistanceMeasurement.xaml.cs">
       <DependentUpon>DistanceMeasurement.xaml</DependentUpon>
@@ -76,10 +77,13 @@
     <Compile Include="View\Drawpopup.xaml.cs">
       <DependentUpon>Drawpopup.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\LayerDisplayVM.cs" />
     <Compile Include="View\MapViewUC.xaml.cs">
       <DependentUpon>MapViewUC.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\Tiff2Text.cs" />
+    <Compile Include="SplashScreen.xaml.cs">
+      <DependentUpon>SplashScreen.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -117,6 +121,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="SplashScreen.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -133,7 +141,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
@@ -146,11 +154,11 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="BitMiracle.LibTiff.NET">
-      <Version>2.4.633</Version>
-    </PackageReference>
     <PackageReference Include="Esri.ArcGISRuntime.WPF">
       <Version>100.4.0</Version>
+    </PackageReference>
+    <PackageReference Include="WpfAnimatedGif">
+      <Version>1.4.18</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
@@ -168,6 +176,15 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Icons\route_32x32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\screen_50x50.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\wmsdatafile.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\loader.gif" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
